manifests/30-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: ticket-selling
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tickets
  namespace: ticket-selling
spec:
  selector:
    app: tickets
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: ticket-selling
spec:
  selector:
    app: orders
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: ticket-selling
spec:
  selector:
    app: payments
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: expiration
  namespace: ticket-selling
spec:
  selector:
    app: expiration
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: ticket-selling
spec:
  selector:
    app: client
  ports:
    - name: http
      port: 3000
      targetPort: 3000
